added parallel execution of composers

--- a/data_collection_script.ipynb
+++ b/data_collection_script.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,6 +143,37 @@
     "        print(\"Converted\", composition_name, \"to image.\")\n",
     "    # quit the browser\n",
     "    driver.quit()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## In parallel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from threading import Thread"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "threads= [Thread(target= get_pdf, args=(c, compositions[c], )) for c in compositions]\n",
+    "for t in threads:\n",
+    "    t.start()\n",
+    "\n",
+    "for t in threads:\n",
+    "    t.join()"
    ]
   }
  ],
